--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "react-key-index": "^0.1.1"
   },
   "devDependencies": {
     "@types/node": "^20",
